--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url("Plotly_Belly_Button_Biodiversity\bacteria.png");
+    background-image: url("bacteria.png");
     background-size: 100% 100%;
     text-align: center;
     color:white;
